# miku

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md
.antigravitycli/: aec2ab35-b933-410f-beab-a44d399dde81.json
.github/workflows/: ci.yml  container-image.yml  macos-package.yml
crates/miku-agent/: Cargo.toml
crates/miku-agent/src/: lib.rs  provider.rs  runtime.rs  tools.rs
crates/miku-api/: Cargo.toml
crates/miku-api/src/: lib.rs
crates/miku-cli/: Cargo.toml
crates/miku-cli/src/: lib.rs  main.rs
crates/miku-core/: Cargo.toml
crates/miku-core/src/: lib.rs
crates/miku-http-client/: Cargo.toml
crates/miku-http-client/src/: lib.rs
crates/miku-kube/: Cargo.toml
crates/miku-kube/src/: client.rs  clusters.rs  lib.rs  pods.rs  resource_cache.rs  resources.rs  status.rs
crates/miku-server/: Cargo.toml
crates/miku-server/src/: agent.rs  clusters.rs  error.rs  health.rs  lib.rs  nodes.rs  pods.rs  resources.rs  settings.rs  static_assets.rs  test_support.rs
crates/miku-store/: Cargo.toml  README.md
crates/miku-store/src/: agent_conversation_store.rs  agent_conversations.rs  agent_messages.rs  cluster_registry.rs  clusters.rs  lib.rs  migrations.rs  paths.rs  preference_store.rs  preferences.rs  schema.rs  settings.rs  store.rs  tests.rs  util.rs
crates/miku-ui/: Cargo.toml  README.md  build.rs
crates/miku-ui/src/: app.rs  clipboard.rs  cluster_events.rs  dialogs.rs  dock.rs  fonts.rs  forms.rs  lib.rs  menu.rs  native.rs  resource_panel.rs  resources.rs  settings.rs  state.rs  tabs.rs  time.rs
crates/miku-ui/src/resource_panel/: README.md  access_control_shared.rs  cluster_role.rs  cluster_role_binding.rs  config_map.rs  config_shared.rs  cron_job.rs  custom_resources.rs  daemon_set.rs  deployment.rs  endpoint_slice.rs  endpoints.rs  event.rs  horizontal_pod_autoscaler.rs  ingress.rs  ingress_class.rs  job.rs  lease.rs  limit_range.rs  mod.rs  mutating_webhook_configuration.rs  namespace.rs  network.rs  network_policy.rs  network_shared.rs  node.rs  persistent_volume.rs  persistent_volume_claim.rs  pod.rs  pod_disruption_budget.rs  priority_class.rs  replica_set.rs  resource_quota.rs  role.rs  role_binding.rs  runtime_class.rs  secret.rs  service.rs  service_account.rs  stateful_set.rs  (+3 more)
crates/miku-ui/src/resource_panel/components/: actions.rs  describe.rs  map_view.rs  mod.rs  toolbar.rs  yaml_dialog.rs
crates/miku-web/: Cargo.toml  index.html
crates/miku-web/src/: lib.rs
helm/miku/: Chart.yaml  README.md  values.yaml
helm/miku/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
helm/miku/templates/tests/: test-connection.yaml
scripts/: build-web-assets.sh
scripts/macos/: Info.plist.template  build_app.sh  package_dmg.sh
