[workspace]
members = [
    "crates/miku-api",
    "crates/miku-cli",
    "crates/miku-core",
    "crates/miku-http-client",
    "crates/miku-kube",
    "crates/miku-server",
    "crates/miku-store",
    "crates/miku-ui",
    "crates/miku-web",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zhubby/miku"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["json", "macros", "tokio", "ws"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
directories = "6.0.0"
eframe = { version = "0.34.2", default-features = true }
egui-phosphor = "0.12.0"
egui_extras = { version = "0.34.2", features = ["syntect"] }
egui-file-dialog = "0.13.0"
egui-theme-switch = "0.7.0"
egui_dock = "0.19.1"
futures = "0.3.31"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
kube = { version = "3.1.0", features = ["client", "config", "runtime", "ws"] }
miku-api = { path = "crates/miku-api" }
miku-core = { path = "crates/miku-core" }
miku-http-client = { path = "crates/miku-http-client" }
miku-kube = { path = "crates/miku-kube" }
miku-server = { path = "crates/miku-server" }
miku-store = { path = "crates/miku-store" }
miku-ui = { path = "crates/miku-ui" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream"] }
sea-orm = { version = "1.1.20", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.7"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["Event", "EventSource", "HtmlCanvasElement", "Location", "MessageEvent", "Window"] }
