[package]
name = "miku-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
miku-core = { path = "../miku-core" }
miku-kube = { path = "../miku-kube" }
miku-server = { path = "../miku-server" }
miku-store = { path = "../miku-store" }
miku-ui = { path = "../miku-ui" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
