[package]
name = "miku-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "miku"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
miku-core = { workspace = true }
miku-kube = { workspace = true }
miku-server = { workspace = true }
miku-store = { workspace = true }
miku-ui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
