[package]
name = "miku-kube"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
miku-api = { path = "../miku-api" }
miku-core = { path = "../miku-core" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
miku-store = { path = "../miku-store" }
tempfile = { workspace = true }
