[package]
name = "miku-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
miku-api = { path = "../miku-api" }
miku-core = { path = "../miku-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
