[package]
name = "miku-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
eframe = { workspace = true }
egui-phosphor = { workspace = true }
egui-theme-switch = { workspace = true }
egui_dock = { workspace = true }
miku-api = { path = "../miku-api" }
miku-core = { path = "../miku-core" }
