[package]
name = "miku-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
eframe = { workspace = true }
egui-file-dialog = { workspace = true }
egui-phosphor = { workspace = true }
egui-theme-switch = { workspace = true }
egui_table = { workspace = true }
egui_dock = { workspace = true }
miku-api = { path = "../miku-api" }
miku-core = { path = "../miku-core" }
serde_json = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
