[package]
name = "miku-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
eframe = { workspace = true }
egui-file-dialog = { workspace = true }
egui-notify = { workspace = true }
egui-phosphor = { workspace = true }
egui-theme-switch = { workspace = true }
egui_commonmark = { workspace = true }
egui_extras = { workspace = true }
egui_dock = { workspace = true }
futures = { workspace = true }
miku-api = { workspace = true }
miku-core = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[build-dependencies]
vergen-git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
