[package]
name = "miku-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { workspace = true }
miku-http-client = { path = "../miku-http-client" }
miku-ui = { path = "../miku-ui" }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
